--- a/docs/de-de/modules/daten/pages/catalogues-status.adoc
+++ b/docs/de-de/modules/daten/pages/catalogues-status.adoc
@@ -173,6 +173,7 @@ Links wird die Liste der Logs angezeigt. Klicke auf eines dieser Logs, um Inform
 | *Private Exportdatei herunterladen* +
 (material:file_download[])
 | *_Hinweis:_* Verwende diesen Download, wenn du die Exportdatei über einen privaten Link abrufst. +
+*_Hinweis:_* Der Download-Button ist nur für den Exporttyp *Async* verfügbar.
 
 . Klicke auf *Private Exportdatei herunterladen* (material:file_download[]). +
 → Der Export wird gestartet. +
@@ -185,6 +186,7 @@ Links wird die Liste der Logs angezeigt. Klicke auf eines dieser Logs, um Inform
 | *Öffentliche Exportdatei herunterladen* +
 (material:file_download[])
 | *_Hinweis:_* Verwende diesen Download, wenn du die Exportdatei über einen öffentlichen Link abrufst. Die Einstellungen zum öffentlichen Link findest du in den *Download-Einstellungen* eines Katalogs. +
+*_Hinweis:_* Der Download-Button ist nur für den Exporttyp *Async* verfügbar.
 
 . Klicke auf *Öffentliche Exportdatei herunterladen* (material:file_download[]). +
 → Der Export wird gestartet. +
