--- a/docs/en-gb/modules/data/pages/catalogues-status.adoc
+++ b/docs/en-gb/modules/data/pages/catalogues-status.adoc
@@ -172,7 +172,9 @@ The list of logs is shown on the left. Click on one of the logs to show more det
 
 | *Download private export* +
 (material:file_download[])
-|
+| *_Note:_* Use this download if you use a private link. +
+*_Note:_* The download button is only available for *Async* exports. +
+
 . Click on *Download private export* (material:file_download[]). +
 → The export starts. +
 *_Important:_* The export runs in the background. Note that there will be _no_ window for downloading the file straight away. Even exporting small amounts of data will take around 30 minutes. +
@@ -183,7 +185,9 @@ Once the export is finished, you will be notified (material:notifications_none[]
 
 | *Download public export* +
 (material:file_download[])
-|
+| *_Note:_* Use this download if you use a public link. Settings for the public link are carried out in the *Download settings* of a catalogue. +
+*_Note:_* The download button is only available for *Async* exports. +
+
 . Click on *Download public export* (material:file_download[]). +
 → The export starts. +
 *_Important:_* The export runs in the background. Note that there will be _no_ window for downloading the file straight away. Even exporting small amounts of data will take around 30 minutes. +
