Make limango page visible

--- a/docs/de-de/modules/ROOT/nav.adoc
+++ b/docs/de-de/modules/ROOT/nav.adoc
@@ -443,6 +443,7 @@
 *** xref:maerkte:best-practices-kaufland-merkmalverknuepfung.adoc[Best Practice: Merkmale mit Attributen verknüpfen]
 *** xref:maerkte:best-practices-kaufland-rechnungen-hochladen.adoc[Best Practice: Automatisches Hochladen von Rechnungen einrichten]
 ** xref:maerkte:kauflux.adoc[Kauflux]
+** xref:maerkte:limango.adoc[limango]
 ** xref:maerkte:mercateo.adoc[Mercateo]
 ** xref:maerkte:metro.adoc[Metro]
 ** xref:maerkte:mytoys.adoc[myToys]
