--- a/docs/en-gb/modules/markets/pages/limango.adoc
+++ b/docs/en-gb/modules/markets/pages/limango.adoc
@@ -12,7 +12,7 @@ limango, a member of the Otto Group, is the number one platform for young famili
 [#150]
 == Becoming a limango partner
 
-Join the leading platform for family shopping and click ink:https://entdecke.limango.de/marktplatz-partnerprogramm[here^] for more information on the limango marketplace and their partner program and to send your registration request (please note: information is only available in German).
+Join the leading platform for family shopping and click link:https://entdecke.limango.de/marktplatz-partnerprogramm[here^] for more information on the limango marketplace and their partner program and to send your registration request (please note: information is only available in German).
 
 Alternatively, you can also contact our team of partner managers by sending an email to marketplace@limango.de. A partner manager will get in touch with you soon and will work with you to evaluate the potential on link:https://www.limango.de[limango.de^] and talk about your next steps.
 
