--- a/docs/en-gb/modules/crm/pages/emailbuilder.adoc
+++ b/docs/en-gb/modules/crm/pages/emailbuilder.adoc
@@ -5,18 +5,13 @@
 :id: MYFLVYO
 :author: team-crm
 
-[IMPORTANT]
-.EmailBuilder is continuously being developed further
-====
-On this page, we will present you the functions of the new EmailBuilder. The EmailBuilder is continuously being developed further; more functions and features will be added. In the course of development, also this page of the user manual will be completed step-by-step.
-====
-
 All emails that are sent with plentymarkets to your xref:crm:contacts.adoc#[contacts] are based on templates. You create and manage templates with the EmailBuilder in the *CRM » EmailBuilder (Test phase)* menu. 
 
 [TIP]
-.Multipart format
+.Email templates are sent in multipart format
 ====
-The email templates in the EmailBuilder use the multipart format which has the advantage that the emails are sent in an HTML and in a text version at the same time.
+The email templates in the EmailBuilder use the multipart format. This means that the emails are sent in an HTML and in a text version at the same time. +
+This ensures that your emails can be read by all recipients, even if their email client restricts or completely disables the display of HTML in emails. On the other hand, the HTML versions of your emails that you designed are displayed for the recipients whose email client allows the display of HTML. The advantage for you is that you only have to maintain one email template.
 ====
 
 The EmailBuilder is a modular construction kit for quickly creating and editing your email templates via drag-and-drop. The EmailBuilder consists of 2 views: the configuration manager and the editor.
@@ -27,7 +22,7 @@ The EmailBuilder is a modular construction kit for quickly creating and editing 
 
 You can then use the header and footer templates in the email templates as desired. Header and footer are globally active; changes you make to the header and footer affect the rest of all existing templates and all other templates that you will create in the future.
 
-The header, the footer and the settings in the template such as the name, the subject etc. form the framework of your email, so to say. The content of the template is formed with <<#insert-widget, widgets>> and <<#variables-emailbuilder, variables>>. In the emails that are sent to your customer, the variables will then be replaced with the correct content. For example: The variable `Delivery address First name and last name` will be replaced in the email with the first name and the last name of the contact from the delivery address.
+The header, the footer and the settings in the template such as the name, the subject etc. form the framework of your email, so to say. The content of the template is formed with <<#insert-widgets, widgets>> and <<#variables-emailbuilder, variables>>. In the emails that are sent to your customer, the variables will then be replaced with the correct content. For example: The variable `Delivery address First name and last name` will be replaced in the email with the first name and the last name of the contact from the delivery address.
 
 In case of certain events, e.g. if a new order is placed in your plentyShop or when a contact subscribes to a newsletter, your plentymarkets system automatically <<#automate-email-despatch, creates emails from these templates>> and sends them to your contacts.
 
@@ -121,13 +116,13 @@ The signature that was saved for a user in his or her user account in the *Setup
 [#manage-folders]
 == Managing folders
 
-In the EmailBuilder, you can create as many <<#create-folder, folders>> as you like and upt to 3 <<#create-sub-folder, sub-folders>>. After you created a folder, click on material:more_vert[] to create new sub-folders, new templates in general and new header and footer templates and <<#rename-folder, rename>>, <<#move-folder, move>> or <<#delete-folder, delete>> the folders.
+In the EmailBuilder, you can create as many <<#create-folder, folders>> as you like and upt to 3 <<#create-sub-folder, sub-folders>>. After you created the folder, click on material:more_vert[] to create new sub-folders, new templates in general and new header and footer templates and <<#rename-folder, rename>>, <<#move-folder, move>> or <<#delete-folder, delete>> the folders.
 
 Your plentymarkets system contains a folder with pre-defined default templates. These are explained further down on this page in the <<#use-default-templates, Using default templates>> chapter.
 
 [[image-emailbuilder-folder-structure]]
 .Folder structure in the EmailBuilder
-image::crm:emailbuilder-folder-structure.png[width=640, height=360]
+image::crm:emailbuilder-add-folder-template-header-footer.png[width=640, height=360]
 
 [#create-folder]
 === Creating a folder
@@ -260,7 +255,7 @@ Creating a header template:
 . Enter a name for the header.
 . Click on *Save*. +
 → The header template is created.
-. Click on *Add* (material:add[]) to add a language. +
+. Click on *Add* (material:add[]) to <<#add-language, add a language>>. +
 → A new window opens.
 . Select a language from the list. +
 → The window *New name* opens.
@@ -304,7 +299,7 @@ In the line of the folder or sub-folder in which you want to create a footer, cl
 . Enter a name for the footer.
 . Click on *Save*. +
 → The footer template is created.
-. Click on *Add* (material:add[]) to add a language. +
+. Click on *Add* (material:add[]) to <<#add-language, add a language>>. +
 → A new window opens.
 . Select a language from the list. +
 → The window *New name* opens.
@@ -340,13 +335,20 @@ Now create the template and save basic settings such as the name, the subject, C
 [TIP]
 .Switching between multiple templates
 ====
-If you later edit multiple templates in the editor at the same time, you can use the navigation on the left to switch between the individual templates. The template that is currently opened is highlighted in blue. +
-If you are in the editor of an template and want to switch to another template without having saved the changes beforehand, a message will be displayed.
+If you later edit multiple templates in the editor at the same time, you can use the navigation on the left to switch between the individual templates. The template that you have currently open is highlighted in blue font. 
+
+Also it is shown in which template section you are currently in.
+
+* If the material:edit[] *Edit (_language_)* area is highlighted in blue font in the navigation on the left side below the template, you are in the template’s editor.
+
+* If material:translate[] *Language settings* is highlighted in blue font, you are currently in the template’s language-specific settings.
+
+If you are in the editor or in the language settings of a template and want to switch to another template without having saved the changes beforehand, a message will be displayed.
 ====
 
 [[image-emailbuilder-template]]
 .Creating a template in the EmailBuilder
-image::crm:emailbuilder-create-new-template.png[width=640, height=360]
+image::crm:emailbuilder-new-template.png[width=640, height=360]
 
 [.instruction]
 Creating a template:
@@ -359,13 +361,13 @@ Creating a template:
 . Carry out the settings. Note <<#table-emailbuilder-create-template>> and <<#image-emailbuilder-template>>.
 . *Save* (material:save[]) the settings.
 
-*_Note:_* If you do not want to create the template within a folder, directly click on material:add[] *Add* in the bottom left and select material:play_arrow[] material:description[]Template* afterwards. The template will then be created on the first level and does not belong to a folder.
+*_Note:_* If you do not want to create the template within a folder, click on the start page of the *CRM » EmailBuilder (Test phase)* menu in the bottom left on material:add[] *Add* material:play_arrow[] and select material:description[] *Template* afterwards. The template will then be created on the first level and does not belong to a folder.
 
 [TIP]
 .Email templates are sent in multipart format
 ====
 The email templates in the EmailBuilder use the multipart format. This means that the emails are sent in an HTML and in a text version at the same time. +
-This ensures that your emails can be read by all recipients, even if their email client restricts or completely disables the display of HTML in emails. On the other hand, the HTML versions of your emails designed by you are displayed for the recipients whose email client allows the display of HTML. The advantage for you is that you only have to maintain one template.
+This ensures that your emails can be read by all recipients, even if their email client restricts or completely disables the display of HTML in emails. On the other hand, the HTML versions of your emails that you designed are displayed for the recipients whose email client allows the display of HTML. The advantage for you is that you only have to maintain one email template.
 ====
 
 [[table-emailbuilder-create-template]]
@@ -373,11 +375,6 @@ This ensures that your emails can be read by all recipients, even if their email
 [cols="1,3"]
 |====
 |Setting |Explanation
-
-// | *Preview*
-// |Shows a preview of the template. +
-// Select whether you want to see the preview in HTML format or in plain text.
-// Depending on which preview type you select, a window with the content of the email template opens in HTML format or in plain text.
 
 2+^| *Create new template* window
 
@@ -404,7 +401,8 @@ The list contains all <<#create-footer, footers>> that you have already created.
 In this area, create the content of your template using widgets and variables.
 
 |[#intable-template-settings-add]*Add*
-|Click on material:add[] (*Add*) to select the language of the template.
+|Click on material:add[] (*Add*) to select the <<#add-language, language of the template>>. +
+<<#image-emailbuilder-add-languages>> shows the list with the languages after you clicked on material:add[].
 
 |[#intable-template-settings-subject]*Subject*
 |What’s the subject of your email? Enter the subject in the corresponding language.
@@ -413,20 +411,24 @@ In this area, create the content of your template using widgets and variables.
 | *Save*
 |Saves the settings.
 
+|[#intable-template-settings-reload]*Reload data*
+|Click on material:refresh[] to reload the data if the preview doesn’t work properly after you made some changes.
+
 |[#intable-template-settings-edit]*Edit*
 |Click on material:edit[] to edit the content of the template and to use <<#insert-widget, widgets>> and <<#variables-emailbuilder, variables>>. +
 The editor area opens and you can edit the content of the template by clicking on the widgets. +
-The email templates in the EmailBuilder use the multipart format. This means that the emails are sent in an HTML and in a text version at the same time.
+Click on material:css[] in the toolbar on the top to adjust the <<#intable-template-settings-custom-styles, custom styles>> of your template.
+*_Note:_* The email templates use the multipart format. This means that the emails are sent in an HTML and in a text version at the same time.
 
 |[#intable-template-settings-preview]*Preview*
-|Click on material:preview[] and select *Preview HTML* or *Preview plain text*.
+|Click on material:preview[] and select *Preview HTML* or *Preview plain text*. The preview opens in a separate window.
 
 |[#intable-template-settings-copy]*Copy*
 |Click on material:more_vert[] and then on material:copy_content[] *Copy* to copy the content and the settings of the template to another language. +
 *_Note:_* The content is _not_ translated automatically. You have to add the translation yourself.
 
 |[#intable-template-settings-delete]*Delete*
-|Click on material:more_vert[] and then on material:delete[] *Delete* to delete the template.
+|Click on material:more_vert[] and then on material:delete[] *Delete*. After you have confirmed your decision, the template will be deleted.
 
 2+^|[#intable-general-template-settings]*Settings* +
 In the *Settings* area on the right side of your screen, you can carry out the general settings for the template in the corresponding language. 
@@ -450,6 +452,9 @@ In the *Settings* area on the right side of your screen, you can carry out the g
 
 |[#intable-template-settings-dynamic-attachments]*Dynamic attachments*
 |This drop-down list provides all xref:orders:order-documents.adoc#100[location-based documents] that you set up in the *Setup » Client » [Select client] » Locations » [Select location] » Documents* menu. Select (material:check_box[role=skyBlue]) up to 3 dynamic attachments from the drop-down list.
+
+//| *From*
+//|This is the sender of the email just as it is saved in the email settings of your plentymarkets system.
 
 |[#intable-template-settings-reply-to]*Reply to*
 |Who is the recipient of this email? Enter the email address(es). +
@@ -511,6 +516,10 @@ In this area, you can find some common examples about how to adjust the styling 
 *_Inner margin:_* Enter `padding:10px;` in this field if the margin should be 10px on all sides. Enter `padding: 10px 20px;` if the margin should be 10px on the top and bottom and 20px on the left and right sides. +
 --
 
+[[image-emailbuilder-add-languages]]
+.Adding languages to a template
+image::crm:emailbuilder-add-new-language.png[width=640, height=360]
+
 Now structure the content of your email by inserting variables via the widgets. How to proceed is described in the following chapter <<#insert-widget, Inserting a widget into a template>>.
 
 [#insert-widget]
@@ -528,11 +537,17 @@ In the editor, you can find a selection of widgets whose contents are already pr
 * <<#intable-widget-item-list, Item list>>
 * <<#intable-widget-image, Image>>
 
-For example, you will find in the *Order items* widget a pre-defined list with the most important variables around the ordered item such as item name, the number of ordered items, the prices, the shipping costs and the total invoice amount. You can, however, customise the content anytime and add more column names and individual positions. <<#image-emailbuilder-widget-order-items>> shows the editing mode of the pre-defined *Order items* widget.
+For example, you will find in the *Order items* widget a pre-defined list with the most important variables around the ordered item such as item name, the number of ordered items, the prices, the shipping costs and the total invoice amount. However, you can adjust the content at any time according to your needs and add further column names and individual items.
+
+//// 
+
+<<#image-emailbuilder-widget-order-items>> shows the editing mode of the predefined *Order items* widget.
 
 [[image-emailbuilder-widget-order-items]]
 .Editing mode of the pre-defined widget *Order items*
 image::crm:emailbuilder-editing-mode-order-items.png[width=640, height=360]
+
+////
 
 Proceed as described below to insert one or multiple widgets into your template.
 
@@ -605,9 +620,9 @@ Click on *Close settings* (material:close[]) to close the settings. Click on *De
 *_Note:_* You can find all addresses that are saved for the contact in the contact data record in the xref:crm:edit-contact.adoc#addresses[Addresses] area. The contact’s primary delivery and invoice address are saved in the contact data record in the xref:crm:edit-contact.adoc#primary-address[Primary address] area.
 
 |[#intable-widget-order-items]*Order items*
-|This widget contains an already pre-defined layout for the order items with sample data. The sample data will then be replaced with the correct values in the email. <<#image-emailbuilder-widget-order-items>> shows the standard widget with further settings options. 
+|This widget contains an already pre-defined layout for the order items with sample data. The sample data will then be replaced with the correct values in the email. 
 
-Click on material:settings[] to open the settings. Use the drop-down lists to decide which content is to be shown in the columns and as individual positions. Click on material:unfold_more[] to change the order. Click on material:add[] (*Add new entry*) in the settings to add further columns. Click on *Remove entry* (material:delete[]) to delete the columns from the overview.
+Click on material:settings[] to open the settings. Use the drop-down lists to decide which content is to be shown in the columns and as individual positions. Click on material:unfold_more[]to change the order. Click on material:add[] (*Add new entry*) in the settings to add further columns. Click on *Remove entry* (material:delete[]) to delete the columns from the overview.
 
 |[#intable-widget-item-list]*Item list*
 |In this widget, you can enter text and use variables. Note that you can only use variables from the sub-category <<#variables-order-order-items, Order / Order items (only for item list widget)>> in this widget.
@@ -671,30 +686,59 @@ Editing a widget:
 
 Before you <<#create-folder, created a new folder>>, you might have recognised the folders *Standardvorlagen* and *Default templates*? These folders contain pre-defined templates in German and English language. You can use the templates as they are or adjust the contents just as you like.
 
-Besides the content of the email template, the template name and the subject are already filled in in a default template. This means that you only have to select the header and footer and fill the fields *Reply to* and, if needed, also *CC* and *BCC*.
+Besides the content of the email template, the subject is already filled in in a default template. This means that you only have to select the owner, the client and header and footer and fill the fields *Reply to* and, if needed, also *CC* and *BCC*. Moreover, you can adjust the prefilled subject and add dynamic and static attachments.
 
 [TIP]
 .Switching between multiple templates
 ====
-If you later edit multiple templates in the editor at the same time, you can use the navigation on the left to switch between the individual templates. The template that is currently opened is highlighted in blue. +
-If you are in the editor of an template and want to switch to another template without having saved the changes beforehand, a message will be displayed.
+If you later edit multiple templates in the editor at the same time, you can use the navigation on the left to switch between the individual templates. The template that you have currently open is highlighted in blue font. 
+
+Also it is shown in which template section you are currently in.
+
+* If the material:edit[] *Edit (_language_)* area is highlighted in blue font in the navigation on the left side below the template, you are in the template’s editor.
+
+* If material:translate[] *Language settings* is highlighted in blue font, you are currently in the template’s language-specific settings.
+
+If you are in the editor or in the language settings of a template and want to switch to another template without having saved the changes beforehand, a message will be displayed.
 ====
 
 [[image-emailbuilder-example-default-template]]
 .Example: Default template *Order: Shipping confirmation*
-image::crm:emailbuilder-example-default-template-shipping-confirmation.png[width=640, height=360]
+image::crm:emailbuilder-example-default-template.png[width=640, height=360]
 
-////
-TODO: Screenshot erneuern.
-////
+[#create-default-template]
+==== Creating a default template
+
+12 default templates in total are available in German and English each in your plentymarkets system. When creating a new template, you can select one of these default templates and adjust it, if needed. Refer to the <<#default-templates-name-and-subject, Available default templates>> chapter to see which default templates are available and what their subject is.
+
+[.instruction]
+Creating a default template:
+
+. Go to *CRM » EmailBuilder (Test phase)*.
+. In the line of the folder in which you want to create a default template, click on material:more_vert[]. +
+→ A new window opens.
+. Click on material:add[] *Add* material:play_arrow[] > material:description[] *Template*. +
+→ The *Create new template* window opens.
+. Enter a name for the template.
+. Select header and footer for the default template from the drop-down list.
+. Select a default template from the drop-down list *Build from default template*.
+. *Save* (material:save[]) the settings. +
+→ The template is created and opened. 
+
+As soon as the default template is created, you can see the prefilled content in the editor. Adjust the content by clicking on material:edit[]. +
+The toolbar shows the prefilled subject. Adjust the subject by clicking on material:translate[] in the top right corner. In this area, you can also select up to 3 static attachments that are attached to the email template. +
+In the *Settings* area, select an owner, the client and the header and footer, if not done already. In this area, you can also select up to 3 dynamic attachments and fill the fields *Reply to*, *CC* and *BCC*.
+
+*_Note:_* If you do not want to create the default template within a folder, click on the start page of the *CRM » EmailBuilder (Test phase)* menu in the bottom left on material:add[] *Add* material:play_arrow[] and select material:description[] *Template* afterwards. The template will then be created on the first level and does not belong to a folder.
+
+[#default-templates-name-and-subject]
+==== Available default templates
 
 Would you like to know which default templates are already available in the EmailBuilder and how their subjects are? Simply expand the following area by clicking on material:expand_more[].
 
-[#default-templates-name-and-subject]
 [.collapseBox]
 .Default templates in the EmailBuilder and their subjects
 --
-
 *English default templates in the EmailBuilder and their subjects*
 
 [[table-default-templates-english]]
@@ -798,7 +842,7 @@ Check the email template by opening the preview.
 .Email templates are sent in multipart format
 ====
 The email templates in the EmailBuilder use the multipart format. This means that the emails are sent in an HTML and in a text version at the same time. +
-This ensures that your emails can be read by all recipients, even if their email client restricts or completely disables the display of HTML in emails. On the other hand, the HTML versions of your emails designed by you are displayed for the recipients whose email client allows the display of HTML. The advantage for you is that you only have to maintain one template.
+This ensures that your emails can be read by all recipients, even if their email client restricts or completely disables the display of HTML in emails. On the other hand, the HTML versions of your emails that you designed are displayed for the recipients whose email client allows the display of HTML. The advantage for you is that you only have to maintain one email template.
 ====
 
 [.instruction]
@@ -891,8 +935,15 @@ The following instruction describes how to edit templates in general. The proced
 [TIP]
 .Switching between multiple templates
 ====
-If you later edit multiple templates in the editor at the same time, you can use the navigation on the left to switch between the individual templates. The template that is currently opened is highlighted in blue. +
-If you are in the editor of an template and want to switch to another template without having saved the changes beforehand, a message will be displayed.
+If you later edit multiple templates in the editor at the same time, you can use the navigation on the left to switch between the individual templates. The template that you have currently open is highlighted in blue font. 
+
+Also it is shown in which template section you are currently in.
+
+* If the material:edit[] *Edit (_language_)* area is highlighted in blue font in the navigation on the left side below the template, you are in the template’s editor.
+
+* If material:translate[] *Language settings* is highlighted in blue font, you are currently in the template’s language-specific settings.
+
+If you are in the editor or in the language settings of a template and want to switch to another template without having saved the changes beforehand, a message will be displayed.
 ====
 
 [.instruction]
@@ -904,13 +955,46 @@ Editing a template:
 . Carry out the changes. Note <<#table-emailbuilder-create-template>>.
 . *Save* (material:save[]) the settings.
 
+[#add-language]
+=== Adding a language to the template
+
+You can add the following languages to your template, your header and your footer:
+
+* German
+* English
+* Bulgarian
+* French
+* Italian
+* Spanish
+* Turkish
+* Dutch
+* Polish
+* Portuguese
+* Norwegian
+* Romanian
+* Danish
+* Swedish
+* Czech
+* Russian
+* Slovakian
+* Chinese
+* Vietnamese
+
+Let’s assume you have created a shipping confirmation in English and inserted widgets and variables. You now want to create this shipping confirmation also in French for your French-speaking customers. The quickest way is to copy the template and adjust the translation afterwards. How to proceed in this case is described in the <<#copy-template, Copying a template>> chapter.
+
+[IMPORTANT]
+.Important: Add header and footer in the corresponding language
+====
+If you created a template in multiple languages, remember to create also the header and footer in these languages and to link them with the template.
+====
+
 [#copy-template]
 === Copying a template
 
 You want to copy an existing template to save time when creating a new template with similar content? To do so, proceed as follows.
 
 [TIP]
-_Before copying the template_, carry out the settings in the <<#intable-general-template-settings, Settings>> area. The advantage of this sequence is that you also copy the settings and not only the template content. Thus, you don’t need to carry out the settings for the other templates again.
+_Before copying the template_, carry out the settings in the <<#intable-general-template-settings, Settings>> area. The advantage of this sequence is that you also copy the settings themselves and not only the template content. Thus, you don’t need to carry out the settings for the other templates again.
 
 [.instruction]
 Copying a template:
@@ -922,11 +1006,12 @@ Copying a template:
 . Click on material:copy_content[] *Copy*. +
 → A new window opens.
 . Select the language from the list that you want to copy the template to. +
-→ The window *New name* opens.
+→ The *Enter subject* window opens. +
+*_Note:_* By default, the language abbreviation of the selected language is preselected.
 . Enter the subject in the selected language.
 . Click on *Save*. +
 → The template is copied and opens in the language that you have just selected.
-. Now <<#edit-template, edit>> the copied template according to your needs.
+. Now <<#edit-template, edit>> the copied template according to your needs and adjust the translation.
 
 [#delete-template]
 === Deleting a template
@@ -944,6 +1029,25 @@ Deleting a template:
 → A window opens and you need to confirm your decision.
 . Click on *Delete*. +
 → The template is deleted.
+
+[#remove-language]
+=== Removing a language from the template
+
+Proceed as described below to remove a certain language from the template.
+
+[.instruction]
+Removing a language from the template:
+
+. Go to *CRM » EmailBuilder (Test phase)*.
+. Expand the folder (material:chevron_right[]) that contains the template from which you want to remove a language.
+. Click on the template.
+. In the template’s tabs at the top, select the language that you want to remove.
+. Click on material:more_vert[]. +
+→ A new window opens.
+. Click on material:delete[] *Delete*. +
+→ A window opens and you need to confirm your decision.
+. Click on *Delete*. +
+→ The language is removed from the template.
 
 [#automate-email-despatch]
 == Automating the email despatch
@@ -1120,7 +1224,7 @@ The available variables for the EmailBuilder are grouped into the following cate
 | `order.formattedComments.customerSpecialWishes`
 
 | `DHL Retoure Online QR code`
-|Sends your customers a QR code for xref:fulfilment:plugin-dhl-retoure-online.adoc#[DHL Retoure Online]. If your customers want to send back an item, they have to show the QR code on their smartphone to one of the employees in the post office and they will print the return label and attach it to the parcel. Thus, your customers do no longer need a printer at home and you do no longer have to send the return label attached as PDF. +
+|Sends your customers a QR code for xref:fulfilment:plugin-dhl-retoure-online.adoc#[DHL Retoure Online]. If your customers want to send back an item, they have to show the QR code on their smartphone to one of the employees in the post office and they will print the return label and attach it to the parcel.   Thus, your customers do no longer need a printer at home and you do no longer have to send the return label attached as PDF. +
 The QR code is shown as an URL in the email of your customers. After clicking on the URL, the QR code appears in a separate window.
 | `order.formattedGeneral.DHLRetoureOnlineQRCodeURL`
 
@@ -1240,7 +1344,7 @@ The QR code is shown as an URL in the email of your customers. After clicking on
 |ID of the xref:orders:managing-orders.adoc#1200[order status] as it is saved in the *Setup » Orders » Status* menu.
 | `order.statusId`
 
-| `Status`
+| `Order status`
 |Name of the order status as it is saved in the *Setup » Orders » Statuses* menu.
 | `order.statusName`
 
