--- a/docs/en-gb/modules/crm/pages/emailbuilder.adoc
+++ b/docs/en-gb/modules/crm/pages/emailbuilder.adoc
@@ -2254,7 +2254,7 @@ As an alternative, you can find the saved IBAN in the *Setup » Settings » Bank
 
 | `Today’s date`
 |Returns today’s date in the format `dd-mm-yyyy`.
-| `"now"|date("d-m-Y")`
+| `"now"\|date("d-m-Y")`
 
 | `URL to basket`
 |Returns the URL to the basket in the online shop.
