First draft for MyToys invoices

--- a/docs/de-de/modules/maerkte/pages/mytoys.adoc
+++ b/docs/de-de/modules/maerkte/pages/mytoys.adoc
@@ -643,6 +643,13 @@ Diese Auftragsdokumente passt du an die Anforderungen von {market} an. Wie das g
 * <<#delivery-notes, Lieferscheine vorbereiten>>
 * <<#return-notes, Rücksendescheine vorbereiten>>
 
+[TIP]
+.Umgang mit Rechnungen bei MyToys
+====
+Rechnungen werden von MyToys erstellt und an deine Kund:innen versendet. Da MyToys nur Sammelrechnungen erstellt, kannst du diese nicht importieren. Für die Buchhaltung benötigst du jedoch die Rechnungen von MyToys. +
+Damit Rechnungen für MyToys dennoch in deinem Export für die Buchhaltung enthalten sind, musst du deshalb eigene Rechnungen für MyToys erstellen. Dann verbuchst du die Rechnungen von MyToys mit den selbst erstellten Rechnungen.
+====
+
 [#delivery-notes]
 === Lieferscheine vorbereiten
 
