Fixed some format errors

--- a/docs/de-de/modules/maerkte/pages/amazon-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/amazon-einrichten.adoc
@@ -292,10 +292,10 @@ Berichte können in sich in den folgenden Status befinden: +
 | *Aktionen*
 | *_Hinweis:_* Einige Berichtstypen können nicht zurückgesetzt oder übersprungen werden. +
 
-* *Bericht herunterladen* (material:file-download[]):  Der Bericht wird heruntergeladen. +
+* *Bericht herunterladen* (material:file_download[]):  Der Bericht wird heruntergeladen. +
 * *Bericht zurücksetzen* (material:history[]): Der Bericht wird zurückgesetzt. Wenn du einen Bericht zurücksetzt, wird der Bericht neu verarbeitet. Das kann zum Beispiel hilfreich sein, wenn der Bericht Auftragsdaten eines neuen Auftrags noch nicht enthält. Wenn der Bericht neu verarbeitet wird, sind darin auch Daten neuer Aufträge enthalten. +
 Achte jedoch darauf, dass die Leistungsfähigkeit deines Systems beeinträchtigt wird, wenn du zu viele oder zu große Berichte zurücksetzt. Neue Berichte werden dann unter Umständen erst später verarbeitet. +
-* *Bericht überspringen* (material:skip-next[]): Der Bericht wird übersprungen. Wenn du einen Bericht überspringst, wird er zunächst nicht verarbeitet. Du kannst den Bericht dann auch nicht herunterladen. +
+* *Bericht überspringen* (material:skip_next[]): Der Bericht wird übersprungen. Wenn du einen Bericht überspringst, wird er zunächst nicht verarbeitet. Du kannst den Bericht dann auch nicht herunterladen. +
 Berichte zu überspringen kann sinnvoll sein, wenn du die Auslastung deines Systems reduzieren willst. Außerdem kannst du so bestimmen, welche Berichte als nächstes verarbeitet werden sollen, denn wenn du Berichte überspringst, werden die nächsten Berichte in der Warteschlange verarbeitet. +
 Beachte jedoch, dass Berichte, die im Hintergrund bereits von einem Prozess aufgegriffen wurden, hier nicht übersprungen werden können. +
 
