--- a/docs/en-gb/modules/markets/pages/amazon-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/amazon-setup.adoc
@@ -292,10 +292,10 @@ Reports can have the following statuses: +
 | *Actions*
 | *_Note:_* Some report types cannot be reset or skipped. +
 
-* *Download report* (material:file-download[]): The report is downloaded. +
+* *Download report* (material:file_download[]): The report is downloaded. +
 * *Reset report* (material:history[]): The report is reset. If you reset a report, it will be processed once again. For example, this might be helpful if the report does not contain data of a new order. When the report is processed again, it will also contain new order data. +
 However, note that resetting too many or too large reports might affect your system’s capacity. This might result in new reports being processed later. +
-* *Skip report* (material:skip-next[]): The report is skipped. If you skip a report, it will not be processed. It is not possible to download the report if it was skipped. +
+* *Skip report* (material:skip_next[]): The report is skipped. If you skip a report, it will not be processed. It is not possible to download the report if it was skipped. +
 Skipping reports might be useful if you want to reduce your system’s workload. Besides that, you can define which reports should be processed next, as the next reports in the queue will be processed if you skip reports. +
 However, note that you cannot skip reports which are already being processed in the background. +
 
