--- a/docs/en-gb/modules/markets/partials/limango-faq.adoc
+++ b/docs/en-gb/modules/markets/partials/limango-faq.adoc
@@ -182,7 +182,7 @@ If none of the errors listed above applies to your variation, then check the val
 . Click on *Search* (icon:search[role="blue"]).
 . Check all entries with the level *error*.
 . Open the log entry with the message *Validation log*. +
-→ The log entry contains a link to the validation file. Click on the link to open the file.
+→ The log entry contains a link to the validation file. Click on the link to open the file. +
 → The validation file contains a list of all variations and the corresponding error messages.
 . Check and correct the variation data.
 --
